Revert "refactor: Add Stopwatch utility and refactor game loop timing"
This reverts commit 64f93c6ea4c3e4297cd33b5f7c47fe4cab8c483a.